tests/parser/bad/exps/exp_t-fun-lparen-id-colon-tid-with.scilexp
fun (x: (Bool)] => x (* should be 'Bool))' instead *)
